- Added two articles - fixed font size for "articletitle" on mobile devices with small width - added article card descriptions - added group card article names of each author - Added h3 below the maintitle of the page - fixed titles of some article pages
*This is the last big update to the site. Future changes will only be very small fixes to typos or so.*

--- a/articles/articlestyle.css
+++ b/articles/articlestyle.css
@@ -149,7 +149,7 @@ hr{
 @media (max-width: 550px) {
     .articletitle{
         font-family: 'Noto Sans', sans-serif;
-        font-size: 400%;
+        font-size: 280%;
         margin-top: 50%;
         text-align: center;
 }
@@ -157,8 +157,8 @@ hr{
     .articletext{
         text-align: left;
         font-size: 100%;
-        padding-right: 30px;
-        padding-left: 30px;
+        padding-right: 45px;
+        padding-left: 45px;
         font-family: 'Noto Sans', sans-serif;
 }
 
